# mcp-forge

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
.github/workflows/: release.yml
src/: ir.rs  main.rs  spec.rs
