[package]
name = "mcp-forge"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Generate Rust MCP servers from OpenAPI specs"
license = "MIT"
repository = "https://github.com/pleme-io/mcp-forge"

[[bin]]
name = "mcp-forge"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
serde = { version = "1", features = ["derive"] }
sekkei = { git = "https://github.com/pleme-io/sekkei" }
serde_json = "1"
serde_yaml_ng = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Code generators build strings with format!() + push_str() by design.
format_push_string = "allow"
